also slurm added

--- a/src/transformers/0.2_iter_trans.ipynb
+++ b/src/transformers/0.2_iter_trans.ipynb
@@ -2,6 +2,89 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "8ac9cce5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU 0 - Allocated: 0.00 MB, Reserved: 0.00 MB, Free: 0 MB\n",
+      "GPU 1 - Allocated: 0.00 MB, Reserved: 0.00 MB, Free: 0 MB\n",
+      "GPU 2 - Allocated: 0.00 MB, Reserved: 0.00 MB, Free: 0 MB\n",
+      "GPU 3 - Allocated: 0.00 MB, Reserved: 0.00 MB, Free: 0 MB\n",
+      "GPU 4 - Allocated: 0.00 MB, Reserved: 0.00 MB, Free: 0 MB\n",
+      "GPU 5 - Allocated: 0.00 MB, Reserved: 0.00 MB, Free: 0 MB\n",
+      "GPU 6 - Allocated: 0.00 MB, Reserved: 0.00 MB, Free: 0 MB\n",
+      "GPU 7 - Allocated: 0.00 MB, Reserved: 0.00 MB, Free: 0 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import torch\n",
+    "\n",
+    "# # Check memory usage of all available GPUs\n",
+    "# for i in range(torch.cuda.device_count()):\n",
+    "#     print(f\"GPU {i} - Allocated: {torch.cuda.memory_allocated(i) / 1024**2:.2f} MB, Reserved: {torch.cuda.memory_reserved(i) / 1024**2:.2f} MB, Free: {torch.cuda.memory_reserved(i) - torch.cuda.memory_allocated(i)} MB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "aa178776",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA available: True\n",
+      "Number of GPUs: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import torch\n",
+    "\n",
+    "# print(\"CUDA available:\", torch.cuda.is_available())\n",
+    "# print(\"Number of GPUs:\", torch.cuda.device_count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "80f5e896",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# torch.cuda.empty_cache()  # Releases all unused cached memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2399d093",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cuda', index=0)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "# device"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "7aa14fe5",
    "metadata": {
@@ -13318,9 +13401,10 @@
     "        model = GPTLikeModel(\n",
     "            vocab_size, d_model, n_heads, num_layers, max_seq_len, seed=iteration_seed\n",
     "        )\n",
-    "    \n",
+    "        \n",
+    "        torch.cuda.empty_cache()\n",
     "        # Move the model to GPU if available\n",
-    "        device = torch.device(\"cuda:2\" if torch.cuda.is_available() else \"cpu\")\n",
+    "        device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "        model = model.to(device)\n",
     "    \n",
     "        # Define the optimizer and loss function\n",
@@ -13563,7 +13647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
