--- a/src/transformers/0.3_iter_trans_big.ipynb
+++ b/src/transformers/0.3_iter_trans_big.ipynb
@@ -13298,87 +13298,99 @@
     "\n",
     "results = defaultdict(list)\n",
     "final_models = {}\n",
+    "# Set the number of iterations for each n value\n",
+    "num_iterations = 10\n",
     "\n",
     "for n in n_values:\n",
-    "    # PREPARE EVTH\n",
+    "    # Repeat the training process for each n value num_iterations times\n",
+    "    results_for_n = []  # Create a separate list for each n value\n",
+    "    for iteration in range(num_iterations):\n",
+    "        print(f\"Training with n={n}, iteration={iteration + 1}\")\n",
+    "        # Set a different seed for each iteration to get different accuracies\n",
+    "        iteration_seed = SEED + iteration\n",
+    "        \n",
+    "        # PREPARE EVTH\n",
+    "        # Create dataset and data loader\n",
+    "        dataset = TripletDataset(df.sample(n=n, random_state=iteration_seed))\n",
+    "        train_loader = DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
+    "    \n",
+    "        # Initialize the model\n",
+    "        model = GPTLikeModel(\n",
+    "            vocab_size, d_model, n_heads, num_layers, max_seq_len, seed=iteration_seed\n",
+    "        )\n",
     "\n",
-    "    # Create dataset and data loader\n",
-    "    dataset = TripletDataset(df.sample(n=n, random_state=SEED))\n",
-    "    train_loader = DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
+    "        # Move the model to GPU if available\n",
+    "        device = torch.device(\"cuda:3\" if torch.cuda.is_available() else \"cpu\")\n",
+    "        model = model.to(device)\n",
     "\n",
-    "    # Initialize the model\n",
-    "    model = GPTLikeModel(\n",
-    "        vocab_size, d_model, n_heads, num_layers, max_seq_len, seed=SEED\n",
-    "    )\n",
+    "        # Define the optimizer and loss function\n",
+    "        optimizer = optim.Adam(model.parameters(), lr=lr)\n",
+    "        criterion = nn.CrossEntropyLoss()\n",
     "\n",
-    "    # Move the model to GPU if available\n",
-    "    device = torch.device(\"cuda:2\" if torch.cuda.is_available() else \"cpu\")\n",
-    "    model = model.to(device)\n",
+    "        # RUN LAUNCHING\n",
     "\n",
-    "    # Define the optimizer and loss function\n",
-    "    optimizer = optim.Adam(model.parameters(), lr=lr)\n",
-    "    criterion = nn.CrossEntropyLoss()\n",
+    "        # Training and testing loop (memorization task)\n",
+    "        model.train()\n",
     "\n",
-    "    # RUN LAUNCHING\n",
+    "        for epoch in range(epochs):\n",
+    "            total_loss = 0\n",
+    "            model.train()  # Set model to training mode\n",
     "\n",
-    "    # Training and testing loop (memorization task)\n",
-    "    model.train()\n",
-    "\n",
-    "    for epoch in range(epochs):\n",
-    "        total_loss = 0\n",
-    "        model.train()  # Set model to training mode\n",
-    "\n",
-    "        # Training on the same data\n",
-    "        for batch in tqdm(train_loader):\n",
-    "            inputs, targets = batch\n",
-    "            inputs = inputs.to(device)\n",
-    "            targets = targets.to(device)\n",
-    "\n",
-    "            # Forward pass\n",
-    "            optimizer.zero_grad()  # can be placed anywhere before loss.backward\n",
-    "            outputs = model(inputs)\n",
-    "\n",
-    "            # We only care about the first token in the output sequence\n",
-    "            outputs = outputs[:, 0, :]  # Shape becomes: (batch_size, vocab_size)\n",
-    "\n",
-    "            targets = targets.view(-1)  # Flatten the targets\n",
-    "\n",
-    "            # Compute loss\n",
-    "            loss = criterion(outputs, targets)\n",
-    "\n",
-    "            # Backward pass and optimization\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "\n",
-    "            total_loss += loss.item()\n",
-    "\n",
-    "        print(f\"Epoch {epoch + 1}, Training Loss: {total_loss / len(train_loader)}\")\n",
-    "        if epoch % 2 != 0:\n",
-    "            continue\n",
-    "        # Testing on the same data (memorization check)\n",
-    "        model.eval()  # Set model to evaluation mode\n",
-    "        correct = 0\n",
-    "        total = 0\n",
-    "        with torch.no_grad():\n",
-    "            for batch in tqdm(train_loader):  # Testing on the same dataset\n",
+    "            # Training on the same data\n",
+    "            for batch in tqdm(train_loader):\n",
     "                inputs, targets = batch\n",
     "                inputs = inputs.to(device)\n",
     "                targets = targets.to(device)\n",
     "\n",
+    "                # Forward pass\n",
+    "                optimizer.zero_grad()  # can be placed anywhere before loss.backward\n",
     "                outputs = model(inputs)\n",
-    "                outputs = outputs[:, 0, :]  # Only take the first token prediction\n",
-    "                predicted = torch.argmax(outputs, dim=1)\n",
     "\n",
-    "                total += targets.size(0)\n",
-    "                correct += (predicted == targets.view(-1)).sum().item()\n",
-    "        #             print(total, correct)\n",
+    "                # We only care about the first token in the output sequence\n",
+    "                outputs = outputs[:, 0, :]  # Shape becomes: (batch_size, vocab_size)\n",
     "\n",
-    "        accuracy = 100 * correct / total\n",
-    "        print(f\"Epoch {epoch + 1}, Memorization Accuracy: {accuracy:.5f}%\")\n",
-    "        results[n].append(accuracy)\n",
-    "    final_models[n] = model\n",
+    "                targets = targets.view(-1)  # Flatten the targets\n",
+    "\n",
+    "                # Compute loss\n",
+    "                loss = criterion(outputs, targets)\n",
+    "\n",
+    "                # Backward pass and optimization\n",
+    "                loss.backward()\n",
+    "                optimizer.step()\n",
+    "\n",
+    "                total_loss += loss.item()\n",
+    "\n",
+    "            print(f\"Epoch {epoch + 1}, Training Loss: {total_loss / len(train_loader)}\")\n",
+    "            if epoch % 2 != 0:\n",
+    "                continue\n",
+    "            # Testing on the same data (memorization check)\n",
+    "            model.eval()  # Set model to evaluation mode\n",
+    "            correct = 0\n",
+    "            total = 0\n",
+    "            with torch.no_grad():\n",
+    "                for batch in tqdm(train_loader):  # Testing on the same dataset\n",
+    "                    inputs, targets = batch\n",
+    "                    inputs = inputs.to(device)\n",
+    "                    targets = targets.to(device)\n",
+    "\n",
+    "                    outputs = model(inputs)\n",
+    "                    outputs = outputs[:, 0, :]  # Only take the first token prediction\n",
+    "                    predicted = torch.argmax(outputs, dim=1)\n",
+    "\n",
+    "                    total += targets.size(0)\n",
+    "                    correct += (predicted == targets.view(-1)).sum().item()\n",
+    "            #             print(total, correct)\n",
+    "\n",
+    "            accuracy = 100 * correct / total\n",
+    "            print(f\"Epoch {epoch + 1}, Memorization Accuracy: {accuracy:.5f}%\")\n",
+    "            results_for_n.append(accuracy)\n",
+    "        # Save the final model for this iteration\n",
+    "        final_models[(n, iteration)] = model\n",
     "    \n",
-    "        # Add timestamp to filename\n",
+    "    # Save all accuracies for the current n value\n",
+    "    results[n].append(results_for_n)\n",
+    "\n",
+    "    # Add timestamp to filename\n",
     "    timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
     "    # Pickle the results and final models dictionaries\n",
     "    with open(f\"../../../data/out_metrics/results_{timestamp}_50_100k_trans.pkl\", \"wb\") as f:\n",
@@ -13445,11 +13457,11 @@
     }
    ],
    "source": [
-    "with open(\n",
-    "    \"../../../data/out_metrics/results_20241030_112648_50_100k_trans.pkl\", \"rb\"\n",
-    ") as file:\n",
-    "    results = pickle.load(file)\n",
-    "print(results[50000][-10:])"
+    "# with open(\n",
+    "#     \"../../../data/out_metrics/results_20241030_112648_50_100k_trans.pkl\", \"rb\"\n",
+    "# ) as file:\n",
+    "#     results = pickle.load(file)\n",
+    "# print(results[50000][-10:])"
    ]
   },
   {
@@ -13504,31 +13516,31 @@
     }
    ],
    "source": [
-    "results_melted = (\n",
-    "    pd.DataFrame(results)\n",
-    "    .reset_index()\n",
-    "    .melt(id_vars=\"index\", var_name=\"Series\", value_name=\"Values\")\n",
-    "    .rename(columns={\"index\": \"epochs\"})\n",
-    ")\n",
+    "# results_melted = (\n",
+    "#     pd.DataFrame(results)\n",
+    "#     .reset_index()\n",
+    "#     .melt(id_vars=\"index\", var_name=\"Series\", value_name=\"Values\")\n",
+    "#     .rename(columns={\"index\": \"epochs\"})\n",
+    "# )\n",
     "\n",
-    "results_melted.epochs = results_melted.epochs * 2\n",
+    "# results_melted.epochs = results_melted.epochs * 2\n",
     "\n",
-    "# Set the Seaborn style and color palette\n",
-    "sns.set(style=\"whitegrid\")\n",
-    "palette = sns.color_palette(\"husl\")  # 'husl' palette has beautiful colors\n",
+    "# # Set the Seaborn style and color palette\n",
+    "# sns.set(style=\"whitegrid\")\n",
+    "# palette = sns.color_palette(\"husl\")  # 'husl' palette has beautiful colors\n",
     "\n",
-    "# Plot the data using Seaborn\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "sns.lineplot(data=results_melted, x=\"epochs\", y=\"Values\", hue=\"Series\", palette=palette)\n",
+    "# # Plot the data using Seaborn\n",
+    "# plt.figure(figsize=(10, 6))\n",
+    "# sns.lineplot(data=results_melted, x=\"epochs\", y=\"Values\", hue=\"Series\", palette=palette)\n",
     "\n",
-    "# Add labels and legend\n",
-    "plt.xlabel(\"epochs\")\n",
-    "plt.ylabel(\"Accuracy\")\n",
-    "plt.title(\"Accuracy per epoch of training for different data size\")\n",
-    "plt.legend(title=\"N rows\")\n",
+    "# # Add labels and legend\n",
+    "# plt.xlabel(\"epochs\")\n",
+    "# plt.ylabel(\"Accuracy\")\n",
+    "# plt.title(\"Accuracy per epoch of training for different data size\")\n",
+    "# plt.legend(title=\"N rows\")\n",
     "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "# # Show the plot\n",
+    "# plt.show()"
    ]
   },
   {
