actual pictures with std for 0.2 and 0.3

--- a/src/transformers/0.2_iter_trans.ipynb
+++ b/src/transformers/0.2_iter_trans.ipynb
@@ -13724,8 +13724,8 @@
     "    std_values = subset[\"std_value\"]\n",
     "\n",
     "    # Calculate the upper and lower bounds and clip them between 0 and 100\n",
-    "    upper_bound = np.clip(mean_values + 2 * std_values, 0, 100)\n",
-    "    lower_bound = np.clip(mean_values - 2 * std_values, 0, 100)\n",
+    "    upper_bound = np.clip(mean_values + std_values, 0, 100)\n",
+    "    lower_bound = np.clip(mean_values - std_values, 0, 100)\n",
     "\n",
     "    # Plot the mean line\n",
     "    plt.plot(subset[\"epochs\"], mean_values, label=f\"{n_rows} (Mean)\")\n",
