finalized code for seqs

--- a/src/transformers/_0.4_iter_layers_activations.ipynb
+++ b/src/transformers/_0.4_iter_layers_activations.ipynb
@@ -253,7 +253,9 @@
     "        self.transformer_layers = nn.ModuleList(\n",
     "            [\n",
     "                nn.TransformerDecoderLayer(\n",
-    "                    d_model=d_model, nhead=n_heads, activation=activation_fn\n",
+    "                    d_model=d_model, \n",
+    "                    nhead=n_heads, \n",
+    "                    activation=activation_fn\n",
     "                )\n",
     "                for _ in range(num_layers)\n",
     "            ]\n",
