data management was actualized

--- a/src/data_management/0_snomed_starting.ipynb
+++ b/src/data_management/0_snomed_starting.ipynb
@@ -95,7 +95,7 @@
    "id": "87fc13c7",
    "metadata": {},
    "source": [
-    "# Loading of SNOMED"
+    "# Check does it work"
    ]
   },
   {
@@ -288,7 +288,7 @@
    "source": [
     "import random\n",
     "\n",
-    "BANNED_PROPS = ['icd-o-3_code', 'term_type', 'subset_member', 'label', 'terminology', 'synonyms', 'unifieds']\n",
+    "# BANNED_PROPS = ['icd-o-3_code', 'term_type', 'subset_member', 'label', 'terminology', 'synonyms', 'unifieds']\n",
     "RANDOM_SEED=30_239_566\n",
     "\n",
     "\n",
