--- a/src/data_management/1_snomed_get_dataset.ipynb
+++ b/src/data_management/1_snomed_get_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "de618e27",
    "metadata": {},
    "outputs": [],
@@ -20,23 +20,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "8d9f840e",
    "metadata": {},
    "outputs": [],
    "source": [
     "DB_NAME = \"../../../data/pym.sqlite3\"\n",
     "ZIP_NAME = \"../../../data/umls-2024AA-full.zip\"\n",
-    "SAVE_TO = \"../../../data/triplets.tsv\"\n",
+    "SAVE_TO = \"../../../data/created_data/triplets.tsv\"\n",
     "\n",
     "\n",
-    "BANNED_PROPS = ['icd-o-3_code', 'term_type', 'subset_member', 'label', 'terminology', 'synonyms', 'unifieds']\n",
+    "BANNED_PROPS = [\n",
+    "                'icd-o-3_code',  #ok almost empty\n",
+    "                'ctv3id', #ok unique for all, which is bad, full memorization\n",
+    "                'subset_member',  #ok unique for all, which is bad, full memorization\n",
+    "                'label', #ok almost the same\n",
+    "                'synonyms',  #ok almost the same to the parent node\n",
+    "                'unifieds', #ok almost the same to the parent node\n",
+    "                'originals'  #ok almost the same to the parent node\n",
+    "               ]\n",
+    "BANNED_GROUP = ['case_significance_id',\n",
+    "                'groups',\n",
+    "                'type_id',\n",
+    "                'ctv3id',\n",
+    "                'effective_time',\n",
+    "                'unifieds',\n",
+    "                'active',\n",
+    "                'synonyms',\n",
+    "                'terminology',\n",
+    "                'subset_member',\n",
+    "                'definition_status_id',\n",
+    "                'term_type'\n",
+    "               ]\n",
     "RANDOM_SEED=30_239_566"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "83bed834",
    "metadata": {},
    "outputs": [],
@@ -55,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "1244e964",
    "metadata": {},
    "outputs": [],
@@ -70,7 +91,7 @@
     "    # Iterate through all properties of the concept\n",
     "    for prop in concept.get_class_properties():\n",
     "        # Skip the banned properties\n",
-    "        if prop.name in BANNED_PROPS:\n",
+    "        if prop.name in BANNED_PROPS or prop.name in BANNED_GROUP:\n",
     "            continue\n",
     "        \n",
     "        # Get the linked concept(s) via the property\n",
@@ -109,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f1a9bcf5",
    "metadata": {},
    "outputs": [
@@ -117,7 +138,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1220039it [07:06, 2863.03it/s]\n"
+      "1220039it [09:32, 2131.04it/s]\n"
      ]
     }
    ],
@@ -137,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "ec20daed",
    "metadata": {},
    "outputs": [],
