black usage added + logging size of model added

--- a/src/transformers/2_layers_activations_draw.ipynb
+++ b/src/transformers/2_layers_activations_draw.ipynb
@@ -18,6 +18,7 @@
     }
    ],
    "source": [
+    "%load_ext nb_black\n",
     "import pickle\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
