--- a/src/transformers/4_seqs_draw.ipynb
+++ b/src/transformers/4_seqs_draw.ipynb
@@ -18,6 +18,7 @@
     }
    ],
    "source": [
+    "%load_ext nb_black\n",
     "import pickle\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
